# AudioDesigner

./: .gitignore  CMakeLists.txt  Readme.md  build_utils.cmake
ArgParser/: CMakeLists.txt
ArgParser/include/: arg_parser.hpp  argdefs.hpp  parsers.hpp  token.hpp  token_stream.hpp  tokenizers.hpp
ArgParser/src/: ArgParser - Shortcut.lnk
ArgParser/tests/: CMakeLists.txt  arg_parser.cpp  parser_example.cpp  parsers.cpp  token_stream.cpp
AudioEngine/: CMakeLists.txt
AudioEngine/exportheaders/: template_magic.hpp
AudioEngine/include/AudioEngine/: address.hpp  block_allocator.hpp  buffer_reader.hpp  config.hpp  core.hpp  dsp.hpp  miniaudio_utils.hpp  monitoring.hpp  ring_buffer.hpp  shm.hpp  sockapi.hpp  socket.hpp  sparse_collection.hpp
AudioEngine/include/AudioEngine/buffers/: buffer.hpp  circular_streams.hpp  generic_streams.hpp  pcm_buffer.hpp  text_buffer.hpp
AudioEngine/src/: CMakeLists.txt  shm_windows.cpp  sockapi_windows.cpp
AudioEngine/tests/Net/: address_ipv4_str.cpp  bind.cpp  close.cpp  connect_accept.cpp  endpoint_equality.cpp  get_endpoint.cpp  get_peer_name.cpp  get_sock_name.cpp  listen.cpp  parse_endpoint.cpp  socket.cpp
AudioEngine/tests/Net/address_ipv4/: address_ipv4_bytes.cpp  address_ipv4_equality.cpp  address_ipv4_from_bytes.cpp  address_ipv4_from_inaddr.cpp  address_ipv4_from_int.cpp  address_ipv4_from_str.cpp  address_ipv4_number.cpp
AudioEngine/tests/Net/address_ipv6/: address_ipv6_bytes.cpp  address_ipv6_display_string.cpp  address_ipv6_equality.cpp  address_ipv6_from_bytes.cpp
AudioEngine/tests/Net/ipv4/: address_ipv4_bytes.cpp  address_ipv4_display_string.cpp  address_ipv4_from_inaddr.cpp  address_ipv4_from_int.cpp
AudioEngine/tests/Net/ipv6/: address_ipv6_from_inaddr.cpp  address_ipv6_from_str.cpp
AudioEngine/tests/block_allocator/: allocate_vector.cpp  rebind_vector.cpp  test_block_allocator.hpp  test_marker_array.cpp
AudioEngine/tests/buffer_reader/: ctor.cpp  make_test_buffer.hpp  read_words.cpp
AudioEngine/tests/buffers/: text_buffer_create.cpp
AudioEngine/tests/config/: string_config.cpp
AudioEngine/tests/core/: ma_wrapper.cpp  ma_wrapper_create.cpp  variadic_contains.cpp  variadic_merge.cpp
AudioEngine/tests/perf/: align_vs_unalign.cpp
AudioEngine/tests/ring_buffer/: append.cpp  back.cpp  for_each.cpp  pop_back.cpp  wrap.cpp
AudioEngine/tests/sparse_collection/: add.cpp  remove.cpp
Plugins/: CMakeLists.txt
Plugins/dsp_basic/: CMakeLists.txt
ext/: CMakeLists.txt  wepoll-utf8.patch
src/dsp_basic/: CMakeLists.txt  conf.cfg
src/dsp_basic/src/: main.cpp
